covid-19 + added retina code to plt code

--- a/ipynb/States Doubling Wind Release.ipynb
+++ b/ipynb/States Doubling Wind Release.ipynb
@@ -511,6 +511,11 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
+    "\n",
     "# Turn interactive plotting off\n",
     "fig, ax = plt.subplots(figsize=(1, 1))\n",
     "plt.ioff()\n",
