--- a/ipynb/US County Population Density.ipynb
+++ b/ipynb/US County Population Density.ipynb
@@ -73,74 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50, 2)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "density_df = s.load_object('density_df')\n",
-    "columns_list = ['Log_Weighted_Density', 'Log_Later_Count']\n",
-    "density_df[columns_list].dropna(axis='index', how='any').shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Ignore big files (GitHub will warn you when pushing files larger than 50 MB. You will not be allowed to\n",
-      "# push files larger than 100 MB.) Tip: If you regularly push large files to GitHub, consider introducing\n",
-      "# Git Large File Storage (Git LFS) as part of your workflow.\n",
-      "covid19/data/csv/linelist.csv\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads00ag.asc\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads00g.asc\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads90ag.asc\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads90g.asc\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads95ag.asc\n",
-      "covid19/data/usa_gpwv3_pdens_ascii_25/usads95g.asc\n",
-      "gpt2-excuse-generator/models/pytorch_model.bin\n",
-      "Miscellaneous/saves/gif/Goodbye_Mr_Conway.gif\n",
-      "Miscellaneous/saves/gif/Q2tbQEo.gif\n",
-      "Miscellaneous/saves/pickle/estimators_list.pickle\n",
-      "Miscellaneous/saves/pickle/fit_estimators_dict.pickle\n",
-      "Miscellaneous/saves/pickle/fit_estimators_list.pickle\n",
-      "StatsByCountry/saves/maps/Spain_languages-en.svg\n",
-      "Strauss–Howe/saves/gif/net_neutrality.gif\n",
-      "Word2Vec/data/GoogleNews-vectors-negative300.bin.gz\n",
-      "Word2Vec/data/text8\n",
-      "Word2Vec/data/text8-phrases\n",
-      "Word2Vec/data/glove.6B/glove.6B.100d.txt\n",
-      "Word2Vec/data/glove.6B/glove.6B.100d.txt.word2vec\n",
-      "Word2Vec/data/glove.6B/glove.6B.200d.txt\n",
-      "Word2Vec/data/glove.6B/glove.6B.300d.txt\n",
-      "Word2Vec/data/glove.6B/glove.6B.50d.txt\n",
-      "Word2Vec/data/glove.840B.300d/glove.840B.300d.txt\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "get_specific_gitignore_files('notebooks', repository_dir=r'D:\\Documents\\Repositories')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -438,6 +370,11 @@
     "\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "\n",
     "fig = plt.figure(figsize=(18, 8))\n",
     "ax = fig.add_subplot(111, autoscale_on=True)\n",
@@ -4623,11 +4560,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Ignore big files (GitHub will warn you when pushing files larger than 50 MB. You will not be allowed to\n",
+      "# push files larger than 100 MB.) Tip: If you regularly push large files to GitHub, consider introducing\n",
+      "# Git Large File Storage (Git LFS) as part of your workflow.\n",
+      "covid19/data/csv/linelist.csv\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads00ag.asc\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads00g.asc\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads90ag.asc\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads90g.asc\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads95ag.asc\n",
+      "covid19/data/usa_gpwv3_pdens_ascii_25/usads95g.asc\n",
+      "gpt2-excuse-generator/models/pytorch_model.bin\n",
+      "Miscellaneous/saves/gif/Goodbye_Mr_Conway.gif\n",
+      "Miscellaneous/saves/gif/Q2tbQEo.gif\n",
+      "Miscellaneous/saves/pickle/estimators_list.pickle\n",
+      "Miscellaneous/saves/pickle/fit_estimators_dict.pickle\n",
+      "Miscellaneous/saves/pickle/fit_estimators_list.pickle\n",
+      "StatsByCountry/saves/maps/Spain_languages-en.svg\n",
+      "Strauss–Howe/saves/gif/net_neutrality.gif\n",
+      "Word2Vec/data/GoogleNews-vectors-negative300.bin.gz\n",
+      "Word2Vec/data/text8\n",
+      "Word2Vec/data/text8-phrases\n",
+      "Word2Vec/data/glove.6B/glove.6B.100d.txt\n",
+      "Word2Vec/data/glove.6B/glove.6B.100d.txt.word2vec\n",
+      "Word2Vec/data/glove.6B/glove.6B.200d.txt\n",
+      "Word2Vec/data/glove.6B/glove.6B.300d.txt\n",
+      "Word2Vec/data/glove.6B/glove.6B.50d.txt\n",
+      "Word2Vec/data/glove.840B.300d/glove.840B.300d.txt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "get_specific_gitignore_files('notebooks', repository_dir=r'D:\\Documents\\Repositories')"
+   ]
   }
  ],
  "metadata": {
