--- a/ipynb/Corona Virus Curve Fitting.ipynb
+++ b/ipynb/Corona Virus Curve Fitting.ipynb
@@ -339,6 +339,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
@@ -422,6 +427,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
@@ -825,6 +835,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
@@ -1188,6 +1203,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
@@ -1435,6 +1455,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
@@ -1895,6 +1920,11 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Use the following only if you are on a high definition device\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('retina')\n",
+    "\n",
     "from scipy.optimize import curve_fit\n",
     "import numpy as np\n",
     "import math\n",
