--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -1,17 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Compile Final Results\n",
     "\n",
-    "Given that we've selected the optimal $\\sigma$, let's grab the precalculated posterior corresponding to that value of $\\sigma$ for each state. Let's also calculate the 90% and 50% highest density intervals (this takes a little while) and also the most likely value."
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats as sps\n",
+    "from IPython.display import clear_output\n",
+    "%run ../../load_magic/storage.py\n",
+    "s = Storage()\n",
+    "states_stats_df = s.load_object('states_stats_df')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,100 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "# We create an array for every possible value of Rt\n",
-    "R_T_MAX = 12\n",
-    "r_t_range = np.linspace(0, R_T_MAX, R_T_MAX*100+1)\n",
-    "\n",
-    "# Gamma is 1/serial interval\n",
-    "# https://wwwnc.cdc.gov/eid/article/26/7/20-0282_article\n",
-    "# https://www.nejm.org/doi/full/10.1056/NEJMoa2001316\n",
-    "GAMMA = 1/7\n",
-    "\n",
-    "FILTERED_REGION_CODES = ['AS', 'GU', 'PR', 'VI', 'MP']\n",
-    "url = 'https://covidtracking.com/api/v1/states/daily.csv'\n",
-    "states = pd.read_csv(url,\n",
-    "                     usecols=['date', 'state', 'positive'],\n",
-    "                     parse_dates=['date'],\n",
-    "                     index_col=['state', 'date'],\n",
-    "                     squeeze=True).sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "from scipy import stats as sps\n",
-    "from IPython.display import clear_output\n",
-    "\n",
-    "sigmas = np.linspace(1/20, 1, 20)\n",
-    "targets = ~states.index.get_level_values('state').isin(FILTERED_REGION_CODES)\n",
-    "states_to_process = states.loc[targets]\n",
-    "results = {}\n",
-    "for state_name, cases in states_to_process.groupby(level='state'):\n",
-    "    print(state_name)\n",
-    "    new, smoothed = prepare_cases(cases, cutoff=25)\n",
-    "    if len(smoothed) == 0:\n",
-    "        new, smoothed = prepare_cases(cases, cutoff=10)\n",
-    "    result_dict = {}\n",
-    "    \n",
-    "    # Holds all posteriors with every given value of sigma\n",
-    "    result_dict['posteriors'] = []\n",
-    "    \n",
-    "    # Holds the log likelihood across all k for each value of sigma\n",
-    "    result_dict['log_likelihoods'] = []\n",
-    "    \n",
-    "    for sigma in sigmas:\n",
-    "        posteriors, log_likelihood = get_posteriors(smoothed, sigma=sigma)\n",
-    "        result_dict['posteriors'].append(posteriors)\n",
-    "        result_dict['log_likelihoods'].append(log_likelihood)\n",
-    "    \n",
-    "    # Store all results keyed off of state name\n",
-    "    results[state_name] = result_dict\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "print('Done.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Each index of this array holds the total of the log likelihoods for\n",
-    "# the corresponding index of the sigmas array.\n",
-    "total_log_likelihoods = np.zeros_like(sigmas)\n",
-    "\n",
-    "# Loop through each state's results and add the log likelihoods to the running total.\n",
-    "for state_name, result_series in results.items():\n",
-    "    total_log_likelihoods += result_series['log_likelihoods']\n",
-    "\n",
-    "# Select the index with the largest log likelihood total\n",
-    "max_likelihood_index = total_log_likelihoods.argmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +140,111 @@
     "        return pd.Series([low, high],\n",
     "                         index=[f'Low_{p*100:.0f}',\n",
     "                                f'High_{p*100:.0f}'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compile Final Results\n",
+    "\n",
+    "Given that we've selected the optimal $\\sigma$, let's grab the precalculated posterior corresponding to that value of $\\sigma$ for each state. Let's also calculate the 90% and 50% highest density intervals (this takes a little while) and also the most likely value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# We create an array for every possible value of Rt\n",
+    "R_T_MAX = 12\n",
+    "r_t_range = np.linspace(0, R_T_MAX, R_T_MAX*100+1)\n",
+    "\n",
+    "# Gamma is 1/serial interval\n",
+    "# https://wwwnc.cdc.gov/eid/article/26/7/20-0282_article\n",
+    "# https://www.nejm.org/doi/full/10.1056/NEJMoa2001316\n",
+    "GAMMA = 1/7\n",
+    "\n",
+    "FILTERED_REGION_CODES = ['AS', 'GU', 'PR', 'VI', 'MP']\n",
+    "url = 'https://covidtracking.com/api/v1/states/daily.csv'\n",
+    "states = pd.read_csv(url,\n",
+    "                     usecols=['date', 'state', 'positive'],\n",
+    "                     parse_dates=['date'],\n",
+    "                     index_col=['state', 'date'],\n",
+    "                     squeeze=True).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "sigmas = np.linspace(1/20, 1, 20)\n",
+    "targets = ~states.index.get_level_values('state').isin(FILTERED_REGION_CODES)\n",
+    "states_to_process = states.loc[targets]\n",
+    "results = {}\n",
+    "for state_name, cases in states_to_process.groupby(level='state'):\n",
+    "    print(state_name)\n",
+    "    new, smoothed = prepare_cases(cases, cutoff=25)\n",
+    "    if len(smoothed) == 0:\n",
+    "        new, smoothed = prepare_cases(cases, cutoff=10)\n",
+    "    result_dict = {}\n",
+    "    \n",
+    "    # Holds all posteriors with every given value of sigma\n",
+    "    result_dict['posteriors'] = []\n",
+    "    \n",
+    "    # Holds the log likelihood across all k for each value of sigma\n",
+    "    result_dict['log_likelihoods'] = []\n",
+    "    \n",
+    "    for sigma in sigmas:\n",
+    "        posteriors, log_likelihood = get_posteriors(smoothed, sigma=sigma)\n",
+    "        result_dict['posteriors'].append(posteriors)\n",
+    "        result_dict['log_likelihoods'].append(log_likelihood)\n",
+    "    \n",
+    "    # Store all results keyed off of state name\n",
+    "    results[state_name] = result_dict\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Each index of this array holds the total of the log likelihoods for\n",
+    "# the corresponding index of the sigmas array.\n",
+    "total_log_likelihoods = np.zeros_like(sigmas)\n",
+    "\n",
+    "# Loop through each state's results and add the log likelihoods to the running total.\n",
+    "for state_name, result_series in results.items():\n",
+    "    total_log_likelihoods += result_series['log_likelihoods']\n",
+    "\n",
+    "# Select the index with the largest log likelihood total\n",
+    "max_likelihood_index = total_log_likelihoods.argmax()"
    ]
   },
   {
@@ -266,20 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "%run ../../load_magic/storage.py\n",
-    "s = Storage()\n",
-    "states_stats_df = s.load_object('states_stats_df')\n",
     "HERD_IMMUNITY_THRESHOLD = 0.6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -380,38 +395,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-26</th>\n",
-       "      <td>2.72</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>4.77</td>\n",
-       "      <td>1.87</td>\n",
-       "      <td>3.46</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>3.41</td>\n",
        "      <td>7220.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-27</th>\n",
-       "      <td>2.39</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>3.98</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>2.95</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>2.97</td>\n",
        "      <td>6173.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-28</th>\n",
-       "      <td>2.09</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>3.46</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>2.57</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>3.43</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>2.59</td>\n",
        "      <td>5010.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-29</th>\n",
-       "      <td>1.90</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>3.14</td>\n",
-       "      <td>1.35</td>\n",
-       "      <td>2.39</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>2.33</td>\n",
        "      <td>4174.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -426,74 +441,74 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">WY</th>\n",
-       "      <th>2020-05-06</th>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.47</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>547.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-07</th>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.52</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>523.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-08</th>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.60</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>519.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-09</th>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.63</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>511.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-05-10</th>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>1.04</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>497.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>496.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-12</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>486.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-13</th>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>485.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-14</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1.51</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>466.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2572 rows × 6 columns</p>\n",
+       "<p>2771 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
        "state date                                                       \n",
        "AK    2020-03-25  3.00    0.86     6.84    1.86     4.27  10143.0\n",
-       "      2020-03-26  2.72    0.99     4.77    1.87     3.46   7220.0\n",
-       "      2020-03-27  2.39    0.90     3.98    1.66     2.95   6173.0\n",
-       "      2020-03-28  2.09    0.75     3.46    1.44     2.57   5010.0\n",
-       "      2020-03-29  1.90    0.62     3.14    1.35     2.39   4174.0\n",
+       "      2020-03-26  2.71    1.03     4.76    1.83     3.41   7220.0\n",
+       "      2020-03-27  2.38    0.97     3.94    1.72     2.97   6173.0\n",
+       "      2020-03-28  2.10    0.91     3.43    1.53     2.59   5010.0\n",
+       "      2020-03-29  1.93    0.88     3.13    1.38     2.33   4174.0\n",
        "...                ...     ...      ...     ...      ...      ...\n",
-       "WY    2020-05-06  0.51    0.00     1.47    0.19     0.85    547.0\n",
-       "      2020-05-07  0.53    0.00     1.52    0.14     0.83    523.0\n",
-       "      2020-05-08  0.61    0.00     1.60    0.21     0.94    519.0\n",
-       "      2020-05-09  0.63    0.00     1.63    0.25     0.99    511.0\n",
-       "      2020-05-10  0.65    0.00     1.65    0.29     1.04    497.0\n",
+       "WY    2020-05-10  0.90    0.31     1.47    0.62     1.10    497.0\n",
+       "      2020-05-11  0.89    0.31     1.46    0.59     1.07    496.0\n",
+       "      2020-05-12  0.91    0.34     1.49    0.62     1.10    486.0\n",
+       "      2020-05-13  0.93    0.33     1.49    0.65     1.13    485.0\n",
+       "      2020-05-14  0.95    0.35     1.51    0.66     1.14    466.0\n",
        "\n",
-       "[2572 rows x 6 columns]"
+       "[2771 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6",
    "language": "python",
    "name": "python3"
   },
