All-Cause Deaths

--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -284,44 +284,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "HERD_IMMUNITY_THRESHOLD = 0.6"
+    "HERD_IMMUNITY_THRESHOLD = 0.9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "df = states.to_frame()\n",
+    "df.columns = ['cumulative_cases']\n",
+    "df['new_cases'] = df.cumulative_cases.diff()\n",
     "final_results['DuFI'] = np.nan\n",
     "for index_tuple, row_series in final_results.iterrows():\n",
     "    state_name = index_tuple[0]\n",
-    "    state_mask_series = (states.index.get_level_values('state') == state_name)\n",
-    "    date_mask_series = (states.index.get_level_values('date') == index_tuple[1])\n",
+    "    state_mask_series = (df.index.get_level_values('state') == state_name)\n",
+    "    time_stamp = index_tuple[1]\n",
+    "    date_mask_series = (df.index.get_level_values('date') == time_stamp)\n",
     "    mask_series = state_mask_series & date_mask_series\n",
-    "    if states[mask_series].shape[0] > 0:\n",
-    "        case_rate = int(states[mask_series].squeeze())\n",
-    "        date_mask_series = (states.index.get_level_values('date') <= index_tuple[1])\n",
-    "        mask_series = state_mask_series & date_mask_series\n",
-    "        total_cases = int(states[mask_series].cumsum()[-1])\n",
-    "        if state_name == 'DC':\n",
-    "            population = 601_723\n",
-    "        else:\n",
-    "            mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
-    "            population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
-    "        days_until_full_infection = int((population-total_cases)/case_rate * HERD_IMMUNITY_THRESHOLD)\n",
-    "        final_results.loc[index_tuple, 'DuFI'] = days_until_full_infection"
+    "    if df[mask_series].shape[0] > 0:\n",
+    "        case_rate = int(df[mask_series].new_cases.squeeze())\n",
+    "        if case_rate > 0:\n",
+    "            date_mask_series = (df.index.get_level_values('date') <= time_stamp)\n",
+    "            mask_series = state_mask_series & date_mask_series\n",
+    "            infected_population = int(df[mask_series].cumulative_cases[-1])\n",
+    "            if state_name == 'DC':\n",
+    "                population = 601_723\n",
+    "            else:\n",
+    "                mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
+    "                population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
+    "            days_until_full_infection = int((HERD_IMMUNITY_THRESHOLD*population - infected_population)/case_rate)\n",
+    "            final_results.loc[index_tuple, 'DuFI'] = days_until_full_infection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -385,137 +390,285 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
-       "      <th>2020-03-25</th>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>6.84</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>10143.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-26</th>\n",
-       "      <td>2.71</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>3.41</td>\n",
-       "      <td>7220.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-27</th>\n",
-       "      <td>2.38</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>3.94</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>6173.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-28</th>\n",
-       "      <td>2.10</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>3.43</td>\n",
-       "      <td>1.53</td>\n",
-       "      <td>2.59</td>\n",
-       "      <td>5010.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-29</th>\n",
-       "      <td>1.93</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>3.13</td>\n",
-       "      <td>1.38</td>\n",
-       "      <td>2.33</td>\n",
-       "      <td>4174.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">WY</th>\n",
-       "      <th>2020-05-10</th>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>1.47</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>497.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-11</th>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>1.46</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>496.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-05-12</th>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>486.0</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>212877.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-13</th>\n",
-       "      <td>0.93</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>485.0</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-14</th>\n",
-       "      <td>0.95</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>466.0</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>106437.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-15</th>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>425750.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-16</th>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>106436.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2771 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
-       "state date                                                       \n",
-       "AK    2020-03-25  3.00    0.86     6.84    1.86     4.27  10143.0\n",
-       "      2020-03-26  2.71    1.03     4.76    1.83     3.41   7220.0\n",
-       "      2020-03-27  2.38    0.97     3.94    1.72     2.97   6173.0\n",
-       "      2020-03-28  2.10    0.91     3.43    1.53     2.59   5010.0\n",
-       "      2020-03-29  1.93    0.88     3.13    1.38     2.33   4174.0\n",
-       "...                ...     ...      ...     ...      ...      ...\n",
-       "WY    2020-05-10  0.90    0.31     1.47    0.62     1.10    497.0\n",
-       "      2020-05-11  0.89    0.31     1.46    0.59     1.07    496.0\n",
-       "      2020-05-12  0.91    0.34     1.49    0.62     1.10    486.0\n",
-       "      2020-05-13  0.93    0.33     1.49    0.65     1.13    485.0\n",
-       "      2020-05-14  0.95    0.35     1.51    0.66     1.14    466.0\n",
-       "\n",
-       "[2771 rows x 6 columns]"
+       "                    ML  Low_90  High_90  Low_50  High_50      DuFI\n",
+       "state date                                                        \n",
+       "AK    2020-05-12  1.04    0.32     1.68    0.71     1.27  212877.0\n",
+       "      2020-05-13  1.04    0.34     1.70    0.72     1.28       NaN\n",
+       "      2020-05-14  1.04    0.31     1.68    0.75     1.31  106437.0\n",
+       "      2020-05-15  1.04    0.33     1.70    0.69     1.26  425750.0\n",
+       "      2020-05-16  1.06    0.34     1.72    0.72     1.29  106436.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "final_results"
+    "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.min().idxmax())\n",
+    "final_results[state_mask_series].tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>ML</th>\n",
+       "      <th>Low_90</th>\n",
+       "      <th>High_90</th>\n",
+       "      <th>Low_50</th>\n",
+       "      <th>High_50</th>\n",
+       "      <th>DuFI</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">NY</th>\n",
+       "      <th>2020-05-12</th>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>7893.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-13</th>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>5186.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-14</th>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>4721.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-15</th>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>4084.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-16</th>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>4662.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ML  Low_90  High_90  Low_50  High_50    DuFI\n",
+       "state date                                                      \n",
+       "NY    2020-05-12  0.58    0.43     0.70    0.51     0.62  7893.0\n",
+       "      2020-05-13  0.76    0.61     0.88    0.69     0.80  5186.0\n",
+       "      2020-05-14  0.94    0.79     1.06    0.88     0.99  4721.0\n",
+       "      2020-05-15  1.09    0.93     1.20    1.02     1.13  4084.0\n",
+       "      2020-05-16  1.16    1.02     1.28    1.09     1.20  4662.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.max().idxmax())\n",
+    "final_results[state_mask_series].tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>cumulative_cases</th>\n",
+       "      <th>percent_population</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">NY</th>\n",
+       "      <th>2020-05-12</th>\n",
+       "      <td>338485.0</td>\n",
+       "      <td>1.746740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-13</th>\n",
+       "      <td>340661.0</td>\n",
+       "      <td>1.757969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-14</th>\n",
+       "      <td>343051.0</td>\n",
+       "      <td>1.770302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-15</th>\n",
+       "      <td>345813.0</td>\n",
+       "      <td>1.784556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-16</th>\n",
+       "      <td>348232.0</td>\n",
+       "      <td>1.797039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  cumulative_cases  percent_population\n",
+       "state date                                            \n",
+       "NY    2020-05-12          338485.0            1.746740\n",
+       "      2020-05-13          340661.0            1.757969\n",
+       "      2020-05-14          343051.0            1.770302\n",
+       "      2020-05-15          345813.0            1.784556\n",
+       "      2020-05-16          348232.0            1.797039"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "state_name = final_results.groupby('state').DuFI.max().idxmax()\n",
+    "mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
+    "population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
+    "state_mask_series = (states.index.get_level_values('state') == state_name)\n",
+    "df = states[state_mask_series].to_frame()\n",
+    "df.columns = ['cumulative_cases']\n",
+    "df['percent_population'] = df.cumulative_cases.map(lambda x: 100*x/population)\n",
+    "df.tail(5)"
    ]
   },
   {
