--- a/ipynb/NE Covid Stats Presentation.ipynb
+++ b/ipynb/NE Covid Stats Presentation.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The best forcast is the realtime R0 estimation, which uses a Bayesian approach with a Gaussian-noise (Poisson distribution) process model for the posteriors. The grey band is the highest density intervals."
+    "The best forecast is the real-time R0 estimation, which uses a Bayesian approach with a Gaussian-noise (Poisson distribution) process model for the posteriors. The grey band is the highest density intervals."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Notice there is a lot of wiggle for the high density states and none for the low ones. I guess they are able to cozy up and then snub each other in turn? (I now suspect that it's just an artifact of slow-reporting data sources.) Here's the roundup of all the states sorted by their maximum likelihood:\n",
+    "Notice there is a lot of wiggle for the high-density states and none for the low ones. I guess they can cozy up and then snub each other in turn? (I now suspect that it's just an artifact of slow-reporting data sources.) Here's the roundup of all the states sorted by their maximum likelihood:\n",
     "![ML](../saves/png/states_by_ml.png)\n",
     "\n",
     "and sorted by the high 90% highest density interval:\n",
@@ -71,9 +71,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COVID-19",
+   "display_name": "Python 3.7.6",
    "language": "python",
-   "name": "covid19"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
