--- a/ipynb/All-Cause Deaths.ipynb
+++ b/ipynb/All-Cause Deaths.ipynb
@@ -728,7 +728,7 @@
     "           lw=.5,\n",
     "           edgecolors='k', zorder=2)\n",
     "\n",
-    "# Aesthetically, extrapolate credible interval by 1 day either side\n",
+    "# Aesthetically, extrapolate credible interval by 90 days either side\n",
     "lowfn = interp1d(date2num(index),\n",
     "                 result['Low_90'].map(get_new_value).values,\n",
     "                 bounds_error=False,\n",
