fixed the cutoff for final results calculation

--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done.\n"
+      "7 Done.\n"
      ]
     }
    ],
@@ -203,12 +203,16 @@
     "targets = ~states.index.get_level_values('state').isin(FILTERED_REGION_CODES)\n",
     "states_to_process = states.loc[targets]\n",
     "results = {}\n",
+    "n_min = 25\n",
     "for state_name, cases in states_to_process.groupby(level='state'):\n",
     "    print(state_name)\n",
-    "    new, smoothed = prepare_cases(cases, cutoff=25)\n",
-    "    if len(smoothed) == 0:\n",
-    "        new, smoothed = prepare_cases(cases, cutoff=10)\n",
+    "    n = 7\n",
+    "    new, smoothed = prepare_cases(cases, cutoff=n)\n",
+    "    while len(smoothed) == 0:\n",
+    "        n -= 1\n",
+    "        new, smoothed = prepare_cases(cases, cutoff=n)\n",
     "    result_dict = {}\n",
+    "    n_min = min(n_min, n)\n",
     "    \n",
     "    # Holds all posteriors with every given value of sigma\n",
     "    result_dict['posteriors'] = []\n",
@@ -225,12 +229,12 @@
     "    results[state_name] = result_dict\n",
     "    clear_output(wait=True)\n",
     "\n",
-    "print('Done.')"
+    "print(f'{n_min} Done.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pickling to D:\\Documents\\Repositories\\notebooks\\covid19\\saves\\pickle\\final_results.pickle\n"
+      "Pickling to C:\\Users\\dev\\Documents\\repositories\\notebooks\\covid19\\saves\\pickle\\final_results.pickle\n"
      ]
     }
    ],
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -390,49 +394,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
-       "      <th>2020-05-12</th>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>1.27</td>\n",
-       "      <td>212877.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-13</th>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>1.28</td>\n",
+       "      <th>2020-05-19</th>\n",
+       "      <td>1.07</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>1.30</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-14</th>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>1.31</td>\n",
-       "      <td>106437.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-15</th>\n",
-       "      <td>1.04</td>\n",
+       "      <th>2020-05-20</th>\n",
+       "      <td>1.07</td>\n",
        "      <td>0.33</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>1.26</td>\n",
-       "      <td>425750.0</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>212935.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-16</th>\n",
-       "      <td>1.06</td>\n",
+       "      <th>2020-05-21</th>\n",
+       "      <td>1.07</td>\n",
        "      <td>0.34</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-22</th>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0.32</td>\n",
        "      <td>1.72</td>\n",
-       "      <td>0.72</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>319401.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-23</th>\n",
+       "      <td>1.06</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>0.71</td>\n",
        "      <td>1.29</td>\n",
-       "      <td>106436.0</td>\n",
+       "      <td>159699.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,14 +445,14 @@
       "text/plain": [
        "                    ML  Low_90  High_90  Low_50  High_50      DuFI\n",
        "state date                                                        \n",
-       "AK    2020-05-12  1.04    0.32     1.68    0.71     1.27  212877.0\n",
-       "      2020-05-13  1.04    0.34     1.70    0.72     1.28       NaN\n",
-       "      2020-05-14  1.04    0.31     1.68    0.75     1.31  106437.0\n",
-       "      2020-05-15  1.04    0.33     1.70    0.69     1.26  425750.0\n",
-       "      2020-05-16  1.06    0.34     1.72    0.72     1.29  106436.0"
+       "AK    2020-05-19  1.07    0.35     1.73    0.73     1.30       NaN\n",
+       "      2020-05-20  1.07    0.33     1.72    0.74     1.31  212935.0\n",
+       "      2020-05-21  1.07    0.34     1.73    0.77     1.34       NaN\n",
+       "      2020-05-22  1.06    0.32     1.72    0.70     1.28  319401.0\n",
+       "      2020-05-23  1.06    0.33     1.73    0.71     1.29  159699.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -506,66 +510,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">NY</th>\n",
-       "      <th>2020-05-12</th>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>7893.0</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
+       "      <th>2020-05-19</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>18524.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-13</th>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>0.69</td>\n",
+       "      <th>2020-05-20</th>\n",
        "      <td>0.80</td>\n",
-       "      <td>5186.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-14</th>\n",
+       "      <td>0.62</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>1.06</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>4721.0</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>16002.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-15</th>\n",
-       "      <td>1.09</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>4084.0</td>\n",
+       "      <th>2020-05-21</th>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>23892.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-16</th>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>1.28</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>4662.0</td>\n",
+       "      <th>2020-05-22</th>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>19117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-23</th>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    ML  Low_90  High_90  Low_50  High_50    DuFI\n",
-       "state date                                                      \n",
-       "NY    2020-05-12  0.58    0.43     0.70    0.51     0.62  7893.0\n",
-       "      2020-05-13  0.76    0.61     0.88    0.69     0.80  5186.0\n",
-       "      2020-05-14  0.94    0.79     1.06    0.88     0.99  4721.0\n",
-       "      2020-05-15  1.09    0.93     1.20    1.02     1.13  4084.0\n",
-       "      2020-05-16  1.16    1.02     1.28    1.09     1.20  4662.0"
+       "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
+       "state date                                                       \n",
+       "TX    2020-05-19  0.90    0.72     1.04    0.82     0.95  18524.0\n",
+       "      2020-05-20  0.80    0.62     0.94    0.72     0.85  16002.0\n",
+       "      2020-05-21  0.77    0.59     0.91    0.66     0.80  23892.0\n",
+       "      2020-05-22  0.66    0.48     0.81    0.56     0.70  19117.0\n",
+       "      2020-05-23  0.51    0.32     0.66    0.42     0.56      NaN"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -615,30 +619,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">NY</th>\n",
-       "      <th>2020-05-12</th>\n",
-       "      <td>338485.0</td>\n",
-       "      <td>1.746740</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
+       "      <th>2020-05-19</th>\n",
+       "      <td>49912.0</td>\n",
+       "      <td>0.198492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-13</th>\n",
-       "      <td>340661.0</td>\n",
-       "      <td>1.757969</td>\n",
+       "      <th>2020-05-20</th>\n",
+       "      <td>51323.0</td>\n",
+       "      <td>0.204104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-14</th>\n",
-       "      <td>343051.0</td>\n",
-       "      <td>1.770302</td>\n",
+       "      <th>2020-05-21</th>\n",
+       "      <td>52268.0</td>\n",
+       "      <td>0.207862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-15</th>\n",
-       "      <td>345813.0</td>\n",
-       "      <td>1.784556</td>\n",
+       "      <th>2020-05-22</th>\n",
+       "      <td>53449.0</td>\n",
+       "      <td>0.212558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-16</th>\n",
-       "      <td>348232.0</td>\n",
-       "      <td>1.797039</td>\n",
+       "      <th>2020-05-23</th>\n",
+       "      <td>53449.0</td>\n",
+       "      <td>0.212558</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -647,14 +651,14 @@
       "text/plain": [
        "                  cumulative_cases  percent_population\n",
        "state date                                            \n",
-       "NY    2020-05-12          338485.0            1.746740\n",
-       "      2020-05-13          340661.0            1.757969\n",
-       "      2020-05-14          343051.0            1.770302\n",
-       "      2020-05-15          345813.0            1.784556\n",
-       "      2020-05-16          348232.0            1.797039"
+       "TX    2020-05-19           49912.0            0.198492\n",
+       "      2020-05-20           51323.0            0.204104\n",
+       "      2020-05-21           52268.0            0.207862\n",
+       "      2020-05-22           53449.0            0.212558\n",
+       "      2020-05-23           53449.0            0.212558"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +685,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -695,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
