--- a/ipynb/Influenza Deaths during Lockdown.ipynb
+++ b/ipynb/Influenza Deaths during Lockdown.ipynb
@@ -2078,9 +2078,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COVID-19",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "covid19"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2092,7 +2092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
