--- a/ipynb/Influenza Deaths during Lockdown.ipynb
+++ b/ipynb/Influenza Deaths during Lockdown.ipynb
@@ -2118,9 +2118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "COVID-19 (Python 3.8.3)",
    "language": "python",
-   "name": "python3"
+   "name": "covid19"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2132,7 +2132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
