got covid19 env working on non-docker setup

--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -685,9 +685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "COVID-19 (Python 3.7.7)",
    "language": "python",
-   "name": "python3"
+   "name": "covid19"
   },
   "language_info": {
    "codemirror_mode": {
